
DOWNLOADERS:
1. read_data(): minor bug fixes.
2. get_data() and get_sta_list(): added flexibility of specifying the source, which could be a Client object.
3. download(): added verbose to calling getdata().

STACKING:
1. Added handling of small data size, i.e., 1 trace, which will return the data without stacking.

===================================================================
Updates in v0.7.4
UTILS:
1. Added spectral whitening function: whiten(), for time series data.

MONITORING:
1. Added whitening option in get_dvv().

TYPES:
1. FFTData, fixed a minor bug when getting Nfft for single trace data.
2. CorrData shaping: trim_end option to accommodate the need by FWANT.

PLOTTING:
1. plot_psd() bug fixed

STACKING:
1. Fixed a bug in robust stacking when the trace amplitudes are anomalously small.

DOWNLOADERS:
1. ms2asdf(): added option to specify response file.

DISPERSION:
1. get_dispersion_waveforms: Use period to get the evenly-spaced period vector.
2. get_dispersion_image: new function to extract dispersion image in velocity-period domain/space.

==================================================================
Updates in v0.7.3
NOISE:
1. Added mpi option and fixed error in handling wrong file, in extract_corrdata()
2. Fixed error handling in get_stationpairs().
3. Added split_sides() to split corrfile sides and save separately.
4. Added shaping_corrdata() to wrap shaping function, convolving with wavelet.
5. Added split option in merge_pairs().

TYPES:
1. Added CorrData.shaping() to shape the data with wavelet.
2. Added CorrData.save() to wrap saving functions.
3. In CorrData.to_asdf(), save stack_method.
4. Fixed a bug in CorrData.to_egf() where the zero lag was not handled correctly. The negative side was wrong.

UTILS:
1. Added gaussian() and ricker() as the shaping wavelets.
2. Added box_smooth().

DOWNLOADERS:
1. In read_data(), changed default to False for getstainv.

HELPERS:
1. Added wavelet_labels().

MONITORING: