@@ -15,6 +15,7 @@ DOWNLOADERS:
 
 STACKING:
 1. Added handling of small data size, i.e., 1 trace, which will return the data without stacking.
+2. Added option of using DOST for tfpws, based on the implementation by Jared Bryan. It was added as a new function:tfpws_dost.
 
 ===================================================================
 Updates in v0.7.4
